--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="2.13.1" targetFramework="net451" />
+  <package id="AForge" version="2.2.5" targetFramework="net451" />
+  <package id="AForge.Imaging" version="2.2.5" targetFramework="net451" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net451" />
   <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net451" />
   <package id="Clojure" version="1.6.0.1" targetFramework="net451" />
   <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
