--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -250,6 +250,7 @@
     <Compile Include="Extensions\Utility.cs" />
     <Compile Include="Extensions\XMLExtensions.cs" />
     <Compile Include="Gaming\DiceCup.cs" />
+    <Compile Include="Gaming\Directional\CardinalDirections.cs" />
     <Compile Include="Gaming\Directional\Compass.cs" />
     <Compile Include="Gaming\IDice.cs" />
     <Compile Include="Gaming\IDiceCup.cs" />
@@ -268,7 +269,6 @@
     <Compile Include="Geometry\Matrix.cs" />
     <Compile Include="Geometry\Matrix3.cs" />
     <Compile Include="Geometry\Matrix4.cs" />
-    <Compile Include="Geometry\Vector3.cs" />
     <Compile Include="Graphics\Images.cs" />
     <Compile Include="Gaming\PlayingCards\Card.cs" />
     <Compile Include="Gaming\PlayingCards\Deck.cs" />
@@ -398,6 +398,7 @@
     <Compile Include="Measurement\Physics\TeraElectronVolts.cs" />
     <Compile Include="Measurement\Length\PlanckLengths.cs" />
     <Compile Include="Measurement\Length\Feet.cs" />
+    <Compile Include="Measurement\Spatial\Degrees.cs" />
     <Compile Include="Measurement\Time\Clocks\Second.cs" />
     <Compile Include="Measurement\Time\FluentTime\AdjustableCurrentTime.cs" />
     <Compile Include="Measurement\Time\FluentTime\DateTimeCreation.cs" />
