--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -400,6 +400,7 @@
     <Compile Include="Measurement\Spatial\Compass.cs" />
     <Compile Include="Measurement\Spatial\Degrees.cs" />
     <Compile Include="Measurement\Spatial\GeoLocation.cs" />
+    <Compile Include="Measurement\Spatial\Radians.cs" />
     <Compile Include="Measurement\Spatial\SpatialExtensions.cs" />
     <Compile Include="Measurement\Time\Clocks\Second.cs" />
     <Compile Include="Measurement\Time\FluentTime\AdjustableCurrentTime.cs" />
