--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -304,6 +304,7 @@
     <Compile Include="IO\Streams\ProgressStream.cs" />
     <Compile Include="IO\SearchStyle.cs" />
     <Compile Include="IO\WindowsAPI.cs" />
+    <Compile Include="Knowledge\IFactDatabase.cs" />
     <Compile Include="Magic\Abodit\IId.cs" />
     <Compile Include="Magic\Abodit\Proxy.cs" />
     <Compile Include="Magic\Abodit\SimpleDocument.cs" />
@@ -459,6 +460,7 @@
     <Compile Include="Misc\ProductExampleClass.cs" />
     <Compile Include="Parsing\Base58CheckString.cs" />
     <Compile Include="Parsing\Base58String.cs" />
+    <Compile Include="Persistence\DynamicContext.cs" />
     <Compile Include="Persistence\IPersistTable.cs" />
     <Compile Include="Persistence\PersistableSettings.cs" />
     <Compile Include="Persistence\PersistTable.cs" />
