--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -560,7 +560,7 @@
     <Compile Include="Threading\FileSingleton.cs" />
     <Compile Include="Threading\Gate.cs" />
     <Compile Include="Threading\GCNotification.cs" />
-    <Compile Include="Geometry\Coordinate.cs" />
+    <Compile Include="Graphics\Geometry\Coordinate.cs" />
     <Compile Include="Geometry\Coordinate64.cs" />
     <Compile Include="Threading\Heap.cs" />
     <Compile Include="Threading\ICondition.cs" />
