--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -259,10 +259,10 @@
     <Compile Include="Gaming\PlayerTable.cs" />
     <Compile Include="Gaming\PlayingCards\FaceValues.cs" />
     <Compile Include="Gaming\PlayingCards\Suites.cs" />
-    <Compile Include="Geometry\DD\GeometryEx.cs" />
-    <Compile Include="Geometry\DD\Intersection.cs" />
-    <Compile Include="Geometry\DD\Line.cs" />
-    <Compile Include="Geometry\DD\Polygon.cs" />
+    <Compile Include="Graphics\DD\GeometryEx.cs" />
+    <Compile Include="Graphics\DD\Intersection.cs" />
+    <Compile Include="Graphics\DD\Line.cs" />
+    <Compile Include="Graphics\DD\Polygon.cs" />
     <Compile Include="Geometry\Line\Functions.cs" />
     <Compile Include="Geometry\Line\Segment.cs" />
     <Compile Include="Graphics\Matrix.cs" />
@@ -627,6 +627,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Gaming\Directional\" />
+    <Folder Include="Geometry\DD\" />
+    <Folder Include="Graphics\DDD\" />
     <Folder Include="PatternRecognition\" />
   </ItemGroup>
   <ItemGroup>
