--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -72,6 +72,9 @@
     <Reference Include="CsQuery">
       <HintPath>..\Universal\packages\CsQuery.1.3.4\lib\net40\CsQuery.dll</HintPath>
     </Reference>
+    <Reference Include="Dynamitey">
+      <HintPath>..\Universal\packages\Dynamitey.1.0.2.0\lib\net40\Dynamitey.dll</HintPath>
+    </Reference>
     <Reference Include="Esent.Collections">
       <HintPath>..\Universal\packages\Microsoft.Database.Collections.Generic.1.9.2.0\lib\net40\Esent.Collections.dll</HintPath>
     </Reference>
