--- a/packages.config
+++ b/packages.config
@@ -8,6 +8,7 @@
   <package id="Clojure" version="1.6.0.1" targetFramework="net451" />
   <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
+  <package id="Dynamitey" version="1.0.2.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="FluentAssertions" version="3.2.1" targetFramework="net451" />
   <package id="ImpromptuInterface" version="6.2.2" targetFramework="net451" />
