--- a/packages.config
+++ b/packages.config
@@ -19,6 +19,11 @@
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net451" />
   <package id="System.Data.SqlLocalDb" version="1.10.0.0" targetFramework="net451" />
   <package id="WolframAPI" version="1.2" targetFramework="net451" />
 </packages>
