--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -94,8 +94,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Entity.Design" />
-    <Reference Include="System.Data.SqlLocalDb">
-      <HintPath>..\Universal\packages\System.Data.SqlLocalDb.1.10.0.0\lib\net20\System.Data.SqlLocalDb.dll</HintPath>
+    <Reference Include="System.Data.SqlLocalDb, Version=1.11.0.0, Culture=neutral, PublicKeyToken=9a192a7522c9e1a0, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\AIBrain\packages\System.Data.SqlLocalDb.1.11.0.0\lib\net20\System.Data.SqlLocalDb.dll</HintPath>
     </Reference>
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
