--- a/packages.config
+++ b/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.Database.Collections.Generic" version="1.9.2.0" targetFramework="net451" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.23" targetFramework="net451" />
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net451" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net451" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net451" />
