--- a/packages.config
+++ b/packages.config
@@ -6,7 +6,7 @@
   <package id="AForge.Math" version="2.2.5" targetFramework="net451" />
   <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net451" />
   <package id="Clojure" version="1.6.0.1" targetFramework="net451" />
-  <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
+  <package id="CodeFluentRuntimeClient" version="1.0.0.792" targetFramework="net453" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="Dynamitey" version="1.0.2.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
@@ -17,6 +17,7 @@
   <package id="Microsoft.Database.Collections.Generic" version="1.9.2.0" targetFramework="net453" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.23" targetFramework="net451" />
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net453" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net451" />
