--- a/packages.config
+++ b/packages.config
@@ -12,6 +12,7 @@
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="FluentAssertions" version="3.2.1" targetFramework="net451" />
   <package id="ImpromptuInterface" version="6.2.2" targetFramework="net451" />
+  <package id="Lz4.Net" version="1.0.98" targetFramework="net453" />
   <package id="ManagedEsent" version="1.9.2.0" targetFramework="net453" />
   <package id="MathNet.Numerics" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Database.Collections.Generic" version="1.9.2.0" targetFramework="net453" />
