--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -281,6 +281,9 @@
     <Compile Include="Gaming\PlayingCards\FaceValues.cs" />
     <Compile Include="Gaming\PlayingCards\Suites.cs" />
     <Compile Include="Graphics\Imaging\EFG.cs" />
+    <Compile Include="Graphics\Imaging\Line.cs" />
+    <Compile Include="Graphics\Imaging\Page.cs" />
+    <Compile Include="Graphics\Imaging\Pixel.cs" />
     <Compile Include="Graphics\Matrix3X3.cs" />
     <Compile Include="Graphics\Matrix3X2.cs" />
     <Compile Include="Graphics\DD\GeometryEx.cs" />
