--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -89,6 +89,10 @@
     <Reference Include="ImpromptuInterface">
       <HintPath>..\Universal\packages\ImpromptuInterface.6.2.2\lib\net40\ImpromptuInterface.dll</HintPath>
     </Reference>
+    <Reference Include="Ionic.Zip">
+      <HintPath>..\Multifarious\packages\DotNetZip.1.9.3\lib\net20\Ionic.Zip.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Lz4Net">
       <HintPath>..\Universal\packages\Lz4.Net.1.0.98\lib\net45\Lz4Net.dll</HintPath>
     </Reference>
@@ -155,6 +159,12 @@
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="VirtualPath">
+      <HintPath>..\Multifarious\packages\VirtualPath.0.3.0\lib\net45\VirtualPath.dll</HintPath>
+    </Reference>
+    <Reference Include="VirtualPath.DotNetZip">
+      <HintPath>..\Multifarious\packages\VirtualPath.DotNetZip.0.3.0\lib\net45\VirtualPath.DotNetZip.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -405,6 +415,7 @@
     <Compile Include="Maths\BigIntegerRange.cs" />
     <Compile Include="Maths\BiggerRational.cs" />
     <Compile Include="Maths\Int64Range.cs" />
+    <Compile Include="Maths\TwoToOne.cs" />
     <Compile Include="Maths\UInt256.cs" />
     <Compile Include="Maths\Bits.cs" />
     <Compile Include="Maths\RomanNumber.cs" />
