--- a/packages.config
+++ b/packages.config
@@ -8,6 +8,7 @@
   <package id="Clojure" version="1.6.0.1" targetFramework="net451" />
   <package id="CodeFluentRuntimeClient" version="1.0.0.792" targetFramework="net453" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
+  <package id="DotNetZip" version="1.9.3" targetFramework="net453" />
   <package id="Dynamitey" version="1.0.2.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="FluentAssertions" version="3.2.1" targetFramework="net451" />
@@ -27,5 +28,7 @@
   <package id="Rx-Main" version="2.2.5" targetFramework="net451" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net451" />
   <package id="System.Data.SqlLocalDb" version="1.12.0.0" targetFramework="net451" />
+  <package id="VirtualPath" version="0.3.0" targetFramework="net453" />
+  <package id="VirtualPath.DotNetZip" version="0.3.0" targetFramework="net453" />
   <package id="WolframAPI" version="1.2" targetFramework="net451" />
 </packages>
