--- a/packages.config
+++ b/packages.config
@@ -8,6 +8,8 @@
   <package id="Clojure" version="1.6.0.1" targetFramework="net451" />
   <package id="CodeFluentRuntimeClient" version="1.0.0.792" targetFramework="net453" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
+  <package id="Dapper" version="1.38" targetFramework="net453" />
+  <package id="Dapper.Fluent" version="1.0.0.0" targetFramework="net453" />
   <package id="DotNetZip" version="1.9.3" targetFramework="net453" />
   <package id="Dynamitey" version="1.0.2.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
