--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -128,6 +128,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Entity.Design" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Data.SqlLocalDb, Version=1.12.0.0, Culture=neutral, PublicKeyToken=9a192a7522c9e1a0, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\UberScraper\packages\System.Data.SqlLocalDb.1.12.0.0\lib\net20\System.Data.SqlLocalDb.dll</HintPath>
