--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -456,6 +456,8 @@
     <Compile Include="Measurement\Spatial\GeoLocation.cs" />
     <Compile Include="Measurement\Spatial\Radians.cs" />
     <Compile Include="Measurement\Spatial\SpatialExtensions.cs" />
+    <Compile Include="Measurement\Time\Clocks\MillisecondStopWatch.cs" />
+    <Compile Include="Measurement\Time\Clocks\MicroStopwatch.cs" />
     <Compile Include="Measurement\Time\Clocks\Second.cs" />
     <Compile Include="Measurement\Time\FluentTime\AdjustableCurrentTime.cs" />
     <Compile Include="Measurement\Time\FluentTime\DateTimeCreation.cs" />
