--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -598,6 +598,7 @@
     <Compile Include="Threading\AbandonableTask.cs" />
     <Compile Include="Security\MersenneTwister.cs" />
     <Compile Include="Threading\ActorExtensions.cs" />
+    <Compile Include="Threading\SimpleCancel.cs" />
     <Compile Include="Threading\RandomOrg\Quota.cs" />
     <Compile Include="Threading\RandomOrg\IntegerGenerator.cs" />
     <Compile Include="Threading\RandomOrg\WebInterface.cs" />
