--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -302,12 +302,12 @@
     <Compile Include="Gaming\PlayingCards\FaceValues.cs" />
     <Compile Include="Gaming\PlayingCards\Suites.cs" />
     <Compile Include="Graphics\Imaging\EFG.cs" />
-    <Compile Include="Graphics\Imaging\EFG2.cs" />
+    <Compile Include="Graphics\Moving\EFG2.cs" />
     <Compile Include="Graphics\Imaging\EFGExtensions.cs" />
     <Compile Include="Graphics\Imaging\Line.cs" />
     <Compile Include="Graphics\Imaging\Frame.cs" />
     <Compile Include="Graphics\Imaging\Pixel.cs" />
-    <Compile Include="Graphics\Imaging\Pixelyx.cs" />
+    <Compile Include="Graphics\Moving\Pixelyx.cs" />
     <Compile Include="Graphics\Matrix3X3.cs" />
     <Compile Include="Graphics\Matrix3X2.cs" />
     <Compile Include="Graphics\DD\GeometryEx.cs" />
