--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -302,8 +302,8 @@
     <Compile Include="Gaming\PlayingCards\FaceValues.cs" />
     <Compile Include="Gaming\PlayingCards\Suites.cs" />
     <Compile Include="Graphics\Imaging\EFG.cs" />
-    <Compile Include="Graphics\Moving\EFG2.cs" />
-    <Compile Include="Graphics\Imaging\EFGExtensions.cs" />
+    <Compile Include="Graphics\Moving\EFV.cs" />
+    <Compile Include="Graphics\EFGExtensions.cs" />
     <Compile Include="Graphics\Imaging\Line.cs" />
     <Compile Include="Graphics\Imaging\Frame.cs" />
     <Compile Include="Graphics\Imaging\Pixel.cs" />
