--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -303,7 +303,7 @@
     <Compile Include="Gaming\PlayingCards\Suites.cs" />
     <Compile Include="Graphics\Imaging\EFG.cs" />
     <Compile Include="Graphics\Moving\EFV.cs" />
-    <Compile Include="Graphics\EFGExtensions.cs" />
+    <Compile Include="Graphics\GraphicsExtensions.cs" />
     <Compile Include="Graphics\Imaging\Line.cs" />
     <Compile Include="Graphics\Imaging\Frame.cs" />
     <Compile Include="Graphics\Imaging\Pixel.cs" />
